--- a/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
@@ -9,7 +9,13 @@
 <h:head></h:head>
 <body>
 	<ui:composition template="/resources/plantilla/plantilla.xhtml">
+		
+		<ui:define name="titulo">
+			 <title>Desarrollo Audiencia</title>	
+		</ui:define>
+			
 		<ui:define name="content">
+			#{controllerLogin.redirectConciliador()}
   			<h:form id="desarrolloForm" enctype="multipart/form-data">
   				
 				<div class='content-wrapper' style="height:10px;overflow:auto">
