--- a/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
@@ -97,6 +97,8 @@
 		
 		<ui:define name="content">			
 			
+			
+			#{controllerLogin.redirect()}
 			<div class='content-wrapper' style="height:10px;overflow:auto">
 			<div class="content">
 				<div class="row">
