--- a/src/main/webapp/modulos/audiencia/modal/modalregistrarasistencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/modal/modalregistrarasistencia.xhtml
@@ -16,12 +16,12 @@
 				<div class="animated flipInY">
 					<div class="box box-primary box-solid animated flipInY">
 						<div class="box-header text-center with-border">
-							<h3 class="box-title">Esta Seguro de Registrar la Asistencia</h3>
+							<h3 class="box-title">REGISTRAR ASISTENCIA</h3>
 						</div>
 							<div class="box-body" style="background-color: aliceblue;">
 								<div class="row">
 									<div class="col-lg-12 text-center">
-										<h:outputLabel style="font-size: 18px;" value="Radicado No. 23122016002" />
+										<h:outputLabel style="font-size: 18px;" value="Esta Seguro de Registrar la Asistencia" />
 										<br/>
 									</div>
 								</div>
