--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -97,6 +97,7 @@
 		</ui:define>
 			
 		<ui:define name="content">	
+			#{controllerLogin.redirectConalbos()}
 			<div class='content-wrapper' style="height:10px;overflow:auto">
 			<div class="content">
 				<div class="row">
