--- a/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadorestabla.xhtml
@@ -17,6 +17,7 @@
 			</ui:define>
 			
 			<ui:define name="content">
+				#{controllerLogin.redirectConalbos()}
 				<div class='content-wrapper' style="height:10px;overflow:auto">
 				<div class="content">
 					<div class="col-md-12">
