Aregrar Envio de Citaciones

--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -9,7 +9,7 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<a href="/Madiba" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
+		<a href="/Madiba/index.jsf" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
 			<span class="logo-mini"><b>C</b>on.</span> <!-- logo for regular state and mobile devices -->
 			<span class="logo-lg"><b>Conalbos</b></span>
 		</a>
