--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -14,7 +14,7 @@
 				<!-- Optionally, you can add icons to the links -->
 				<li class="active">
 					<h:outputLink value="/Madiba/index.jsf" >
-				        <i class="fa fa-users"></i>
+				        <i class="fa fa-home"></i>
 						<span>Inicio</span>	
 				    </h:outputLink>
 				</li>
@@ -42,14 +42,14 @@
 					</li>
 					<li>
 						<h:outputLink value="/Madiba/modulos/solicitudes/listasolicitudes.jsf" >
-					        <i class="fa fa-users"></i>
+					        <i class="fa fa-list-alt"></i>
 							<span>Solicitudes</span>
 					    </h:outputLink>
 					</li>
 				</h:panelGroup>
 				<li>
 					<h:outputLink value="/Madiba/modulos/audiencia/listaaudiencias.jsf" >
-				        <i class="fa fa-users"></i>
+				        <i class="fa fa-th-list"></i>
 						<span>Audiencia</span>
 				    </h:outputLink>
 				</li>			
