--- a/src/main/webapp/modulos/audiencia/listaaudienciastabla.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudienciastabla.xhtml
@@ -175,7 +175,7 @@
 		
 		<div class='main-footer' style="height: 43.11111px;">
 			<div class="text-center">
-				<h:form id="formBotones">
+				<h:form id="formBotones" enctype="multipart/form-data">
 
 					<h:commandButton value="Ficha" action="listaaudiencias" styleClass="btn btn-sm btn-primary btn-menu"/>
 					
