--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -49,6 +49,7 @@
 	<h:outputScript library="js" name="jquery.inputmask.js" />
 	<h:outputScript library="js" name="jquery.inputmask.date.extensions.js" />
 	<h:outputScript library="js" name="jquery.inputmask.extensions.js" />
+	<h:outputScript library="js" name="numeral.min.js" />
 	
 	
 </h:body>
