Mejora en rol conciliador y eliminado index de ambos roles...

--- a/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
@@ -94,7 +94,7 @@
 		            </h:panelGroup>
 		            <div class="col-lg-6">
 			            <h:outputLabel value="Valor: " />
-			            <h:outputText style="padding-left:5%" value=" $#{solicitud.devoluciones.get(0).valor}" />
+			            <h:outputText styleClass="mascara" style="padding-left:5%" value="#{solicitud.devoluciones.get(0).valor}" />
 		            </div>
 				</h:panelGroup>
 				
