--- a/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudiencias.xhtml
@@ -117,8 +117,8 @@
 							<ul class="nav nav-tabs" style="border-color: blue">
 								<li class="active"><a href="#todas" data-toggle="tab">Todas <span class="label label-#{controllerSolicitud.colorSolicitudEstado('REGISTRADA')}">#{controllerAudiencia.listaSolicitud.size()}</span></a>
 								</li>
-								<li><a href="#citacion" data-toggle="tab">Por citación <span class="label label-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-CITACION')}">#{controllerAudiencia.solicitudesPorEstado('AUDIENCIA-CITACION').size()}</span></a>
-								</li>
+								<h:panelGroup layout="block" rendered="#{modelLogin.role=='conalbos'}"> <li><a href="#citacion" data-toggle="tab">Por citación <span class="label label-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-CITACION')}">#{controllerAudiencia.solicitudesPorEstado('AUDIENCIA-CITACION').size()}</span></a>
+								</li></h:panelGroup>
 								<li><a href="#pendientes" data-toggle="tab">Pendientes <span class="label label-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-PENDIENTE')}">#{controllerAudiencia.solicitudesPorEstado('AUDIENCIA-PENDIENTE').size()}</span></a></li>
 								<li><a href="#encurso" data-toggle="tab">En curso <span class="label label-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-ENCURSO')}">#{controllerAudiencia.solicitudesPorEstado('AUDIENCIA-ENCURSO').size()}</span></a></li>
 								<li><a href="#finalizadas" data-toggle="tab">Finalizadas <span class="label label-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-FINALIZADA')}">#{controllerAudiencia.solicitudesPorEstado('AUDIENCIA-FINALIZADA').size()}</span></a></li>
@@ -145,6 +145,7 @@
 									</h:form>
 								</div>
 								
+								<h:panelGroup layout="block" rendered="#{modelLogin.role=='conalbos'}"> 
 								<div class="tab-pane" id="citacion">
 									<h:form id="formcitacion">
 										<ui:param name="formulario" value="@form :formtodas :formpendientes :formencurso :formfinalizadas :formBotones"/>
@@ -163,6 +164,7 @@
 											</ui:repeat>
 									</h:form>
 								</div>
+								</h:panelGroup>
 								<div class="tab-pane" id="pendientes">
 									<h:form id="formpendientes">
 										<ui:param name="formulario" value="@form :formtodas :formcitacion :formencurso :formfinalizadas :formBotones"/>
