--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -85,7 +85,7 @@
 		              				<br/>
 	              				</h:panelGroup>              				
 	              				<h:outputLabel value="Valor:" />
-	              				<h:outputText style="padding-left:5%" value="$#{controllerSolicitud.mascaraValor(pagos.valor)}" />
+	              				<h:outputText styleClass="mascara" style="padding-left:5%" value="#{controllerSolicitud.mascaraValor(pagos.valor)}" />
 	           				</div>
 	       				</div>
 							
