--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -85,7 +85,9 @@
 		              				<br/>
 	              				</h:panelGroup>              				
 	              				<h:outputLabel value="Valor:" />
-	              				<h:outputText styleClass="mascara" style="padding-left:5%" value="#{controllerSolicitud.mascaraValor(pagos.valor)}" />
+	              				<h:outputText style="padding-left:5%" value="#{controllerSolicitud.mascaraValor(pagos.valor)}" >
+							    	<f:convertNumber currencySymbol="$" type="currency" maxFractionDigits="2" minFractionDigits="2" />
+				                </h:outputText>
 	           				</div>
 	       				</div>
 							
@@ -94,7 +96,9 @@
 				<h:panelGroup layout="block" styleClass="box-body" style="border-top: 1px solid #f4f4f4;">
 		          	<div class="col-lg-6">
 			            <h:outputLabel value="Pretenciones:" />
-			            <h:outputText styleClass="mascara" style="padding-left:5%" value="#{solicitud.cuantia}"/>
+			            <h:outputText style="padding-left:5%" value="#{solicitud.cuantia}">
+					    	<f:convertNumber currencySymbol="$" type="currency" maxFractionDigits="2" minFractionDigits="2" />
+		                </h:outputText>
 		          	</div>
 		          	<div class="col-lg-6">
 			            <h:outputLabel value="Conciliador por:" />
