--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -9,7 +9,7 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<a href="/Madiba/index.jsf" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
+		<a href="#{modelLogin.role=='conalbos' ? '/Madiba/modulos/solicitudes/listasolicitudes.jsf' : '/Madiba/modulos/audiencia/listaaudiencias.jsf'}" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
 			<span class="logo-mini"><b>C</b>on.</span> <!-- logo for regular state and mobile devices -->
 			<span class="logo-lg"><b>Conalbos</b></span>
 		</a>
@@ -37,7 +37,7 @@
 					<li class="dropdown user user-menu">
 						<a href="#"	class="dropdown-toggle"> 
 							<!--<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />-->
-							<h:graphicImage library="img" name="png/girl.png" class="user-image" alt="User Image" style="width:35px;height:35px;margin-top:-8px;margin-right:4px"/>
+							<h:graphicImage library="img" name="#{modelLogin.role=='conalbos' ? 'png/girl.png' : controllerConciliador.fotoConciliador(modelLogin.idConciliador)}" class="user-image" alt="User Image" style="width:35px;height:35px;margin-top:-8px;margin-right:4px"/>
 							<span class="hidden-xs">#{modelLogin.nickname}</span>
 						</a>
 					</li>
