--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -15,7 +15,7 @@
 		</a>
 
 		<div class="navbar navbar-static-top">
-			<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+			<a href="#" id="ocultarBusqueda" class="sidebar-toggle" data-toggle="offcanvas" role="button">
 	        	<span class="sr-only">Toggle navigation</span>
 	      	</a>
 			<div class="navbar-custom-menu">
