--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -7,7 +7,7 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-	<h:form>
+	<h:form id="formBusqueda">
 		<div class="sidebar">
 			<ul class="sidebar-menu">
 				<h:panelGroup layout="block" rendered="#{modelLogin.role=='conalbos'}"> 
