REVISION -- 5 ELIMINACION DE MENSAJES POR CONSOLA

--- a/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
@@ -94,7 +94,7 @@
 																</h:inputText>
 															</div>
 															
-															<h:outputLabel value="Nuevar Pretenciones: " styleClass="col-sm-3 control-label"/>
+															<h:outputLabel value="Nueva Pretenciones: " styleClass="col-sm-3 control-label"/>
 															<div class="has-success col-lg-2">
 																#{modelDesarrolloAudiencia.setNuevaCuantia(controllerDesarrolloAudiencia.solicitud.cuantia)}
 																<h:inputText value="#{modelDesarrolloAudiencia.nuevaCuantia}" styleClass="form-control espacio5" />
@@ -152,7 +152,7 @@
 															</h:inputText>
 														</div>
 														
-														<h:outputLabel value="Nuevar Pretenciones: " styleClass="col-sm-3 control-label"/>
+														<h:outputLabel value="Nueva Pretenciones: " styleClass="col-sm-3 control-label"/>
 														<div class="has-success col-lg-2">
 															#{modelDesarrolloAudiencia.setNuevaCuantia(controllerDesarrolloAudiencia.solicitud.cuantia)}
 															<h:inputText value="#{modelDesarrolloAudiencia.nuevaCuantia}" styleClass="form-control espacio5" >
