--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -129,7 +129,7 @@
 								<div class="tab-pane active" id="todas">
 
 									<h:form id='formtodas'>
-										<ui:param name="formulario" value="@form :formliquidar :formradicar :formasignarconciliador :formaudiencia :formregistrar :formBotones" />
+										<ui:param name="formulario" value="@form :formliquidar :formradicar :formasignarconciliador :formparaaudiencia :formenaudiencia :formaudiencia :formregistrar :formBotones" />
 											
 										<ui:repeat varStatus="n" var="solicitud" value="#{controllerSolicitud.listaSolicitud}" step="2">
 											<h:panelGroup layout="block" class="row">
