REVISIÓN 10 -- SE CORRIGIERÓN ALGUNOS ERRORES ORTOGRAFICOS

--- a/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/fichasolicitud.xhtml
@@ -52,7 +52,7 @@
 							</ul>							
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h:outputLabel value="Descripcion" />
+							<h:outputLabel value="Descripción" />
 							<br/>
 							<h:outputText style="padding-left:5%" value=" #{solicitud.asunto}" />
 						</div>
