--- a/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
@@ -67,7 +67,7 @@
 		          	</div>
 		          	
 					<div class="col-lg-6 col-sm-12 col-xs-12">
-			            <h:outputLabel value="Audiencia Numero:" />
+			            <h:outputLabel value="Audiencia Número:" />
 			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(solicitud.audiencias.size()-1).audienciaNum}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
@@ -82,7 +82,7 @@
 				<h:panelGroup layout="block" rendered="#{solicitud.devoluciones.size()==1}" styleClass="box-body" style="border-top: 1px solid #f4f4f4;">
 					
 					<h:panelGroup layout="block" rendered="#{!solicitud.devoluciones.get(0).devolucion}" class="col-lg-12">
-			            <h:outputLabel value="Por Devolucion" styleClass="label label-danger pull-right"/>
+			            <h:outputLabel value="Por Devolución" styleClass="label label-danger pull-right"/>
 		            </h:panelGroup>
 		            <h:panelGroup layout="block" rendered="#{solicitud.devoluciones.get(0).devolucion}" class="col-lg-12">
 			            <h:outputLabel value="Pagada" styleClass="label label-success pull-right"/>
