REVICIÓN 11 -- Add derechos de autor y catcha

--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -50,6 +50,12 @@
 				        <i class="fa fa-th-list"></i>
 						<span>Audiencia</span>
 				    </h:outputLink>
+				</li>
+				<li>
+					<h:outputLink value="/Madiba/autores.jsf" >
+				        <i class="fa fa-users"></i>
+						<span>Autores</span>
+				    </h:outputLink>
 				</li>	
 			</ul>
 			
